# nrpcalc

./: CHANGELOG.md  LICENSE  README.md  TODOS.md  clear_build.sh  pyproject.toml  requirements.txt  setup.py
deprecated/: deprecated.kmerSetDB.py  deprecated2.kmerSetDB.py
docs/: DOCS.md
examples/: NRPCalcInAction.ipynb  cdsmaker.py
examples/chained_bkg/: LOG
examples/tmp_bkg/: LOG.old
img/: Fig1.ai  Fig2.ai  Fig3.ai  logo.ai
logo/: logo.ai
nrpcalc/: __init__.py  maker.py  nrpcalc.py  synthesis.py  utils.py  vercov.py
nrpcalc/base/: berno.py  finder.py  hgraph.py  kmerSetArray.py  kmerSetDB.py  maker.py  makerchecks.py  projector.py  recovery.py  synthesis.py  utils.py  vercov.py
